tests/matrices/invalid/invalid_bad_value_4.mtx
%%MatrixMarket vector coordinate real general
4 3
1 101
ffsafdsafas 22
4 404
